<resources>
    <string name="app_name">BlueTooth</string>

    <!-- activity_main.xml -->

    <!-- bottom_nav_menu.xml -->
    <string name="nav_item_device">设备连接</string>
    <string name="nav_item_data">查看数据</string>

    <!-- fragment_device.xml -->
    <string name="fragment_device_button1">点击扫描</string>

    <!-- fragment_data.xml -->
    <string name="frag_button_start">开始</string>
    <string name="frag_button_end">结束</string>
    <string name="frag_linear_layout_text1">心率：</string>
    <string name="frag_linear_layout_text2">血氧：</string>
    <string name="frag_linear_layout_text3">收缩压：</string>
    <string name="frag_linear_layout_text4">舒张压：</string>

    <!-- device_item.xml -->
    <string name="device_image_description">蓝牙图标</string>
</resources>