<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bluetooth.ui.data.DataFragment">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/frag_data_graphview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/frag_linear_layout1"
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/frag_data_graphview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.05">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frag_linear_layout_text1"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/frag_text_heart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/frag_linear_layout2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/frag_data_graphview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/frag_linear_layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frag_linear_layout_text2"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/frag_text_spo2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/frag_linear_layout3"
        android:layout_width="160dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/frag_data_graphview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/frag_linear_layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frag_linear_layout_text3"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/frag_text_bps"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frag_linear_layout_text4"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/frag_text_dps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/frag_button_start"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/frag_button_start"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/frag_data_graphview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.05"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/frag_button_end"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/frag_button_end"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/frag_data_graphview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/frag_button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>